--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,11 @@ body{
 	position: absolute;
 	width: 100vw;
 	height: 100vh;
+	font-family: verdana;
+	backdrop-filter: blur(5px);
 	overflow: hidden;
+	background: url('https://picsum.photos/200/1080') no-repeat center center fixed;
+	background-size: cover;
 }
 
 header{
@@ -33,29 +37,46 @@ header > h1{
 }
 
 #card{
+	min-width: 90%;
 	max-width: 90%;
+	padding: 20px;
 	font-size: calc(1vw + 2vh);
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+	border-radius: calc(0.2vw + 0.4vh);
+	background-color:rgba(255, 255, 255, 0.2);
+	backdrop-filter: blur(100vw);
+	color: #000;
+	mix-blend-mode: difference
 }
+
 
 #card > div{
 	margin: 10px;
 }
-#card > div > button{
+
+#quote-text{
+	text-align: justify;
+}
+
+#buttons{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+
+#card > div  button{
 	margin-top: 10px;
 	padding: 10px 20px;
 	cursor: pointer;
 }
 
-#card > div >button#copy-to-clipboard{
-	float: left;
-}
-
-#card > div > button#new-quote{
-	float: right;
-}
 
 @media (min-width: 768px){
-
+	body{
+	background: url('https://picsum.photos/1920/1080') no-repeat center center fixed;
+	background-size: cover;
+	}
 	header > h1{
 		font-size: calc(3vw + 3vh);
 	}
